# services-API/api/openapi.yaml
@@ -67,14 +67,6 @@ paths:
       summary: Returns all SALES REPORT of a provider
       operationId: getProviderSales
       parameters:
-      - name: providerId
-        in: path
-        description: ID of provider to filter
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
       - name: customerId
         in: query
         description: ID of customet to filter
@@ -102,6 +94,14 @@ paths:
           items:
             type: string
             description: IDs of product to filter
+      - name: providerId
+        in: path
+        description: ID of provider to filter
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
           description: successful operation
@@ -152,6 +152,7 @@ paths:
           type: string
       requestBody:
         description: Ticket object that needs to be added to the ledger
+        required: true
         content:
           application/json:
             schema:
@@ -421,13 +422,12 @@ components:
       properties:
         productId:
           type: string
-          format: uuid
         qty:
           minimum: 1
           type: integer
           format: int64
       example:
-        productId: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+        productId: 046b6c7f0b8a43b9b35d6489e6d
         qty: 1
     BuyRequest:
       type: object
@@ -438,7 +438,5 @@ components:
             $ref: '#/components/schemas/ProductDetail'
         customerId:
           type: string
-          format: uuid
         vendorId:
           type: string
-          format: uuid
